# andrea-lads-fastapi-be

./: main.py  pyproject.toml
